--- a/Next_moov/Next_moov/Views/ListFilmPage.xaml
+++ b/Next_moov/Next_moov/Views/ListFilmPage.xaml
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Next_moov.Views.ListFilmPage">
+             x:Class="Next_moov.Views.ListFilmPage"
+             Title="{Binding Titre}">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Label Grid.Row="0" Margin="10" Text="JSON Parsing" FontSize="25" />
             <ListView x:Name="listviewConacts" Grid.Row="1" HorizontalOptions="FillAndExpand" HasUnevenRows="True" ItemSelected="listviewContacts_ItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate>
