--- a/Next_moov/Next_moov/Views/MainPage.xaml
+++ b/Next_moov/Next_moov/Views/MainPage.xaml
@@ -2,14 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Next_moov"
-             x:Class="Next_moov.MainPage">
+             x:Class="Next_moov.MainPage"
+             Title="Next Moov">
 
     <Grid>
 
-        <Label Text="Acceder aux dernierre sorties cinematographique !" FontSize="25" FontAttributes="Bold" />
+        <Label Text="You can now access the next movie release !" FontSize="25" FontAttributes="Bold" />
         <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-            <Button Text="Next MOOV !" Margin="20" Clicked="BtnJson_Click" />
-
+            <Button Text="Go !" Margin="20" Clicked="BtnJson_Click"/>
         </StackLayout>
     </Grid>
 
