--- a/Next_moov/Next_moov/App.xaml
+++ b/Next_moov/Next_moov/App.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Next_moov.App">
     <Application.Resources>
-
+        <StyleSheet Source="/CSS/test.css" />
     </Application.Resources>
 </Application>
