--- a/Next_moov/Next_moov/App.xaml
+++ b/Next_moov/Next_moov/App.xaml
@@ -4,5 +4,23 @@
              x:Class="Next_moov.App">
     <Application.Resources>
         <StyleSheet Source="/CSS/test.css" />
+        <!-- DEFINE ANY CONSTANTS -->
+        <ResourceDictionary>
+            <Style x:Key="labelRedStyle" TargetType="Label">
+                <Setter Property="HorizontalOptions"
+                        Value="Center" />
+                <Setter Property="VerticalOptions"
+                        Value="CenterAndExpand" />
+                <Setter Property="FontSize" Value="Large" />
+                <Setter Property="TextColor" Value="Red" />
+            </Style>
+            <Style x:Key="labelGreenStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="Green" />
+            </Style>
+            <Style x:Key="labelBlueStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="Blue" />
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
+
 </Application>
