--- a/Next_moov/Next_moov/Views/ListFilmPage.xaml
+++ b/Next_moov/Next_moov/Views/ListFilmPage.xaml
@@ -17,15 +17,33 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
-                                <Label Text="{Binding title}" HorizontalOptions="StartAndExpand" Grid.Row="0" TextColor="Blue"  FontAttributes="Bold"/>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
 
-
-
-                                <BoxView HeightRequest="2" Margin="0,10,10,0" BackgroundColor="Gray" Grid.Row="3" HorizontalOptions="FillAndExpand" />
+                                <Image Grid.Row="0"
+                                       Grid.Column="0"
+                                       Grid.RowSpan="2"
+                                       Source="{Binding FullPathPoster}"
+                                       MinimumWidthRequest="50"
+                                       MinimumHeightRequest="50"
+                                       WidthRequest="50" 
+                                       HeightRequest="50" 
+                                       Aspect="AspectFit"
+                                       />
+                                <Label Grid.Row="0"
+                                       Grid.Column="1"
+                                       Text="{Binding title}" 
+                                       TextColor="Black"/>
+                                <Label Grid.Row="1"
+                                       Grid.Column="1"
+                                       Text="{Binding release_date}" 
+                                       TextColor="Green"
+                                       FontAttributes="Italic"/>
                             </Grid>
+                            
                         </ViewCell>
 
                     </DataTemplate>
